# EliteSalesGrowthCommunity

./: .gitignore
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/src/: __init__.py  config.py  database.py  main.py
backend/src/admin/: __init__.py  models.py  router.py  schemas.py  schemas_admin.py
backend/src/auth/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/content/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/discovery/: __init__.py  router.py  schemas.py
backend/src/experts/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/jobs/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/posts/: __init__.py  models.py  router.py  schemas.py  service.py
backend/src/shared/: exceptions.py
backend/src/users/: __init__.py  models.py  router.py  schemas.py  service.py
backend/tests/: test_main.py
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/.next/: app-build-manifest.json  prerender-manifest.json  trace
frontend/.next/cache/: .rscinfo  chrome-devtools-workspace-uuid
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/types/: routes.d.ts  validator.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/app/contact/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/jobs/: page.tsx
frontend/lib/: admin-api.ts  api.ts  auth-context.tsx  utils.ts
(+68 files in other folders)
