[project]
name = "elite-sales-growth-community"
version = "0.1.0"
description = "精英销售成长社区 - Elite Sales Growth Community"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
start = "uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload"
